Added "intended use" version.
Also removed Version.hbm.xml from EMF, as it already exists in commons and made version table related changes difficult.